--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Minimal theme
-description: Minimal is a theme for GitHub Pages.
+title: Jason Xu
+description: Jason Xu's webpage	
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
