--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jason Xu
-description: Jason Xu's webpage	
+description: Jason Xu
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
