--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jason Xu
 description: Jason Xu's homepage
 show_downloads: true
-google_analytics:
+google_analytics: UA-110336584-1
 theme: jekyll-theme-minimal
